--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dnc-boardtasks-back",
   "version": "0.0.0",
@@ -8,14 +7,15 @@
     "autoDoc": "node ./swagger/autoGenDoc.js",
     "dev": "npx nodemon ./swagger/autoGenDoc.js"
   },
-  
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "glob": "^9.3.5",
     "lru-cache": "^11.0.0",
     "mongoose": "^8.5.1",
     "mongoose-to-swagger": "^1.5.1",
+    "morgan": "^1.10.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   }
