--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mongoose": "^8.5.1",
     "mongoose-to-swagger": "^1.5.1",
     "morgan": "^1.10.0",
+    "string": "^3.3.3",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.12.0"
   }
 }
